From version 0.4.2 to 0.4.3
- fix in init script.
- fix in sample lab.xml file.

From version 0.4.1 to 0.4.2
- locking violations in sip message logging and scripting startup fixed.

From version 0.4.0 to 0.4.1
- added cancel to terminate any active invites before forwarding.
- inc usage of temporary registry for stats.

From version 0.3.13 to 0.4.0
- conditional provisioning possible based on server "state".
- realm handling including sipdigest utility, xmlrpc, and swig.
- correct setting of dialog id for multipath calls.
- basic call forwarding complete.

From version 0.3.12 to 0.3.13
- mapped call state property added, needed for telephony management protocol.
- added registry info to swig.
- support for using /etc/sipwitch.d as default xml directory.
- more xmlrpc functions.
- swig range lists for python for loop iterations.

From version 0.3.11 to 0.3.12
- initial xmlrpc support in cgi util.
- proper cdr initialization.
- call maps and display of active calls in progress added.

From version 0.3.10 to 0.3.11
- fix for garbage collection issue in registration re-use.
- introduction of uuid's for call records.
- new thread managed cdr system, will be needed for radius.
- service statistical periods propogated to plugins.
- ability to push error logging into plugins.
- preliminary java, perl, and csharp swig support introduced.

From version 0.3.9 to 0.3.10
- subscriber plugin provider registration management.
- minor update for GNU conventions.
- moved more stack configuration into base object.
- revised periodic stats processing and logging.
- server control "swig" support, starting with python and php5.

From version 0.3.8 to 0.3.9
- man page for daemon admin support shell utility.
- sipwitch can return server info to calling pid.
- disconnect in trying is a declined call, not failed one.
- GNU Telephony MIB introduced for future snmp plugin.
- basic sipwitch call statistics added.

From version 0.3.7 to 0.3.8
- cleanup in module loading and path computations.