@@ -11,7 +11,7 @@
 MAINTAINERCLEANFILES = Makefile.in Makefile
 AM_CXXFLAGS = -I$(top_srcdir)/inc @SIPWITCH_FLAGS@
 LDADD = ../common/libsipwitch.la @SIPWITCH_EXOSIP2@ @SIPWITCH_LIBS@ @DAEMON_LIBS@
-EXTRA_DIST = *.xml *.conf *.log *.defaults *.init GNUTelephony-MIB.txt
+EXTRA_DIST = *.xml *.conf *.log *.defaults *.init *.cron GNUTelephony-MIB.txt
 EXTRA_LTLIBRARIES =
 
 sbin_PROGRAMS = sipw
@@ -66,4 +66,9 @@ install-exec-local:
 	fi
 	$(mkinstalldirs) $(DESTDIR)/$(sysconfdir)/init.d
 	$(INSTALL) -m 0755 sipwitch.init $(DESTDIR)/$(sysconfdir)/init.d/sipwitch
+	if test -d /etc/cron.hourly ; then \
+		$(mkinstalldirs) $(DESTDIR)/$(sysconfdir)/cron.hourly ; \
+		$(INSTALL_DATA) sipwitch.cron $(DESTDIR)/$(sysconfdir)/cron.hourly/sipwitch ; \
+	fi
+
 
